--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 sudo: required
+
 services:
   - docker
 
@@ -7,3 +8,15 @@ before_install:
 
 script:
   - docker run -e CI=true frontend_test npm run test -- --coverage
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "frontend-react"
+  env: "FrontendReact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-609596248833"
+  bucket_path: "frontend-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
